--- a/package.json
+++ b/package.json
@@ -35,22 +35,23 @@
   "types": "dist/index.d.ts",
   "license": "MIT",
   "devDependencies": {
+    "typescript": "^4.5.5",
     "@babel/core": "^7.18.9",
+    "@babel/plugin-proposal-import-wasm-source": "^7.23.0",
     "@babel/preset-env": "^7.18.9",
-    "@rollup/plugin-babel": "^5.3.1",
-    "@rollup/plugin-node-resolve": "^13.3.0",
-    "@rollup/plugin-wasm": "^6.2.2",
     "@typescript-eslint/eslint-plugin": "^5.13.0",
     "@typescript-eslint/parser": "^5.12.0",
     "eslint": "^8.30.0",
     "husky": "3.0.9",
     "lint-staged": "^11.2.6",
     "rollup": "^2.67.2",
+    "@rollup/plugin-babel": "^5.3.1",
+    "@rollup/plugin-node-resolve": "^13.3.0",
+    "@rollup/plugin-wasm": "^6.2.2",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-eslint": "^7.0.0",
     "rollup-plugin-terser": "^7.0.2",
-    "rollup-plugin-typescript2": "^0.31.2",
-    "typescript": "^4.5.5"
+    "rollup-plugin-typescript2": "^0.31.2"
   },
   "dependencies": {
     "@noble/ed25519": "^1.6.1",
@@ -61,5 +62,10 @@
     "js-sha256": "^0.9.0",
     "js-sha3": "^0.8.0",
     "starknet": "^5.19.5"
+  },
+  "browser": {
+    "fs": false,
+    "path": false,
+    "os": false
   }
 }
