--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,16 +13,15 @@
     "resolveJsonModule": true, // 加载json
     "esModuleInterop": true,
     "removeComments": false, // 删除注释
-
     "declaration": true, // 生成定义文件
     "declarationMap": false, // 生成定义sourceMap
     "declarationDir": "./dist", // 定义文件输出目录
-
     "lib": ["esnext", "dom"], // 导入库类型定义
     "types": ["node"] // 导入指定类型包
   },
   "include": [
-    "./src/**/*" // 导入目录
+    "./src/**/*",
+    "globals.d.ts" // 导入目录
   ],
   "exclude": ["node_modules", "babel.config.js"]
 }
