--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "conversation"
   ],
   "scripts": {
-    "prepare": "rm -fr dist && set NODE_ENV=production&& rollup -c rollup.config.js",
-    "dev": "set NODE_ENV=developemnt&& rollup -c rollup.config.js -w",
-    "build": "rm -fr dist && set NODE_ENV=production&& rollup -c rollup.config.js"
+    "prepare": "rm -fr dist && set NODE_ENV=production&& rollup -c rollup.config.js --bundleConfigAsCjs",
+    "dev": "set NODE_ENV=developemnt&& rollup -c rollup.config.js -w --bundleConfigAsCjs",
+    "build": "rm -fr dist && set NODE_ENV=production&& rollup -c rollup.config.js --bundleConfigAsCjs"
   },
   "husky": {
     "hooks": {
@@ -39,35 +39,37 @@
     "@babel/core": "^7.18.9",
     "@babel/plugin-proposal-import-wasm-source": "^7.23.0",
     "@babel/preset-env": "^7.18.9",
-    "@rollup/plugin-babel": "^5.3.1",
-    "@rollup/plugin-node-resolve": "^13.3.0",
-    "@rollup/plugin-wasm": "^6.2.2",
+    "@types/node": "^20.10.5",
     "@typescript-eslint/eslint-plugin": "^5.13.0",
     "@typescript-eslint/parser": "^5.12.0",
     "eslint": "^8.30.0",
     "husky": "3.0.9",
     "lint-staged": "^11.2.6",
-    "rollup": "^2.67.2",
-    "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-eslint": "^7.0.0",
-    "rollup-plugin-terser": "^7.0.2",
-    "rollup-plugin-typescript2": "^0.31.2",
     "typescript": "^4.5.5"
   },
   "dependencies": {
     "@noble/ed25519": "^1.6.1",
     "@protobuf-ts/plugin": "^2.7.0",
+    "@rollup/plugin-babel": "^6.0.4",
+    "@rollup/plugin-commonjs": "^25.0.7",
+    "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-terser": "^0.4.4",
+    "@rollup/plugin-wasm": "^6.2.2",
     "axios": "^0.27.2",
     "get-starknet": "^3.0.1",
     "idb": "^7.1.1",
     "js-sha256": "^0.9.0",
     "js-sha3": "^0.8.0",
+    "rollup": "^4.9.1",
+    "rollup-plugin-eslint": "^7.0.0",
+    "rollup-plugin-typescript2": "^0.36.0",
     "starknet": "^5.19.5",
-    "web3mq_mls": "https://github.com/Generative-Labs/web3mq_mls.git#wasm"
+    "web3mq_mls": "^0.1.0-beta.0"
   },
   "browser": {
     "fs": false,
     "path": false,
     "os": false
-  }
+  },
+  "type": "commonjs"
 }
